--- a/templates/etc/containers/storage.conf.j2
+++ b/templates/etc/containers/storage.conf.j2
@@ -58,7 +58,7 @@ additionalimagestores = [
 #mount_program = "/usr/bin/fuse-overlayfs"
 
 # mountopt specifies comma separated list of extra mount options
-mountopt = "nodev,metacopy=on"
+mountopt = "nodev"
 
 # Size is used to set a maximum size of the container image.
 # size = ""
